fixed model field name

--- a/gandi_livedns.yml
+++ b/gandi_livedns.yml
@@ -779,7 +779,7 @@ definitions:
   Record:
     type: object
     properties:
-      name:
+      rrset_name:
         type: string
       rrset_type:
         type: string
